--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/index.ts"
   },
   "dependencies": {
+    "ceo-client": "^1.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@prisma/client": "^5.20.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "prisma": "^5.20.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.6.2"
